--- a/ScrumWeb/Views/Shared/_Layout.cshtml
+++ b/ScrumWeb/Views/Shared/_Layout.cshtml
@@ -9,9 +9,11 @@
 
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary" style="top:-30px;">
         <div class="container">
-            @Html.ActionLink("ScrumWeb.NET", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+            <a class="navbar-brand" href="/">
+                <img src="~/Content/ScrumWeb.NET-logo.png" alt="" style="max-height:135px;">
+            </a>
             <button type="button" class="navbar-toggler" data-toggle="collapse" data-target=".navbar-collapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
