--- a/ScrumWeb/Views/Shared/_Layout.cshtml
+++ b/ScrumWeb/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary" style="top:-30px;">
         <div class="container">
             <a class="navbar-brand" href="/">
-                <img src="~/Content/ScrumWeb.NET-logo.png" alt="" style="max-height:135px;">
+                <img src="~/Content/ScrumWeb.NET-logo.png" alt="" style="max-height:135px;margin-top:5px;">
             </a>
             <button type="button" class="navbar-toggler" data-toggle="collapse" data-target=".navbar-collapse" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
